include more audio features in dataframe

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -174,15 +174,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "retrying ...1secs\n",
-      "retrying ...5secs\n"
+      "retrying ...3secs\n",
+      "retrying ...2secs\n"
      ]
     }
    ],
@@ -195,6 +195,7 @@
     "dictionary['Tempo'] = []\n",
     "dictionary['Valence'] = []\n",
     "dictionary['Speechiness'] = []\n",
+    "dictionary['Danceability'] = []\n",
     "\n",
     "\n",
     "for i,x in top_100_songs_CA.iterrows():\n",
@@ -208,12 +209,13 @@
     "    dictionary['Tempo'].append(audio_features[0]['tempo'])\n",
     "    dictionary['Valence'].append(audio_features[0]['valence'])\n",
     "    dictionary['Speechiness'].append(audio_features[0]['speechiness'])\n",
+    "    dictionary['Danceability'].append(audio_features[0]['danceability'])\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -244,6 +246,7 @@
        "      <th>Tempo</th>\n",
        "      <th>Valence</th>\n",
        "      <th>Speechiness</th>\n",
+       "      <th>Danceability</th>\n",
        "      <th>Streams</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -257,6 +260,7 @@
        "      <td>116.971</td>\n",
        "      <td>0.642</td>\n",
        "      <td>0.0559</td>\n",
+       "      <td>0.896</td>\n",
        "      <td>243040</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -268,6 +272,7 @@
        "      <td>98.078</td>\n",
        "      <td>0.540</td>\n",
        "      <td>0.0988</td>\n",
+       "      <td>0.825</td>\n",
        "      <td>188427</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -279,6 +284,7 @@
        "      <td>147.986</td>\n",
        "      <td>0.874</td>\n",
        "      <td>0.0575</td>\n",
+       "      <td>0.806</td>\n",
        "      <td>187172</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -290,6 +296,7 @@
        "      <td>171.017</td>\n",
        "      <td>0.345</td>\n",
        "      <td>0.0629</td>\n",
+       "      <td>0.513</td>\n",
        "      <td>186165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -301,6 +308,7 @@
        "      <td>155.086</td>\n",
        "      <td>0.490</td>\n",
        "      <td>0.1930</td>\n",
+       "      <td>0.775</td>\n",
        "      <td>172936</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -315,15 +323,15 @@
        "3    201573         100           Blinding Lights     The Weeknd  171.017   \n",
        "4    234626          82                        P2   Lil Uzi Vert  155.086   \n",
        "\n",
-       "   Valence  Speechiness  Streams  \n",
-       "0    0.642       0.0559   243040  \n",
-       "1    0.540       0.0988   188427  \n",
-       "2    0.874       0.0575   187172  \n",
-       "3    0.345       0.0629   186165  \n",
-       "4    0.490       0.1930   172936  "
+       "   Valence  Speechiness  Danceability  Streams  \n",
+       "0    0.642       0.0559         0.896   243040  \n",
+       "1    0.540       0.0988         0.825   188427  \n",
+       "2    0.874       0.0575         0.806   187172  \n",
+       "3    0.345       0.0629         0.513   186165  \n",
+       "4    0.490       0.1930         0.775   172936  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
