--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1111,16 +1111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1a26151490>"
+       "<matplotlib.collections.PathCollection at 0x1a29833dd0>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     },
