--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import linregress\n",
     "from scipy.stats import pearsonr\n",
+    "from scipy.stats import f_oneway\n",
     "\n",
     "#import set client id and secret key\n",
     "client_credentials_manager = SpotifyClientCredentials(client_id=cid, client_secret=secret)\n",
@@ -175,9 +176,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'acousticness': 0.104,\n",
+      "  'analysis_url': 'https://api.spotify.com/v1/audio-analysis/0nbXyq5TXYPCO7pr3N8S4I',\n",
+      "  'danceability': 0.896,\n",
+      "  'duration_ms': 196653,\n",
+      "  'energy': 0.586,\n",
+      "  'id': '0nbXyq5TXYPCO7pr3N8S4I',\n",
+      "  'instrumentalness': 0,\n",
+      "  'key': 10,\n",
+      "  'liveness': 0.79,\n",
+      "  'loudness': -6.687,\n",
+      "  'mode': 0,\n",
+      "  'speechiness': 0.0559,\n",
+      "  'tempo': 116.971,\n",
+      "  'time_signature': 4,\n",
+      "  'track_href': 'https://api.spotify.com/v1/tracks/0nbXyq5TXYPCO7pr3N8S4I',\n",
+      "  'type': 'audio_features',\n",
+      "  'uri': 'spotify:track:0nbXyq5TXYPCO7pr3N8S4I',\n",
+      "  'valence': 0.642}]\n"
+     ]
+    }
+   ],
    "source": [
     "#Get json output of a track\n",
     "urn = 'spotify:track:0nbXyq5TXYPCO7pr3N8S4I'\n",
@@ -187,7 +213,7 @@
     "track = sp.track(url)\n",
     "#audio_analysis = sp.audio_analysis(url)\n",
     "audio_feature = sp.audio_features(url)\n",
-    "#pprint(track)"
+    "pprint(audio_feature)"
    ]
   },
   {
@@ -695,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -718,6 +744,12 @@
     "\n",
     "ax1, ax2, ax3, ax4 = axs\n",
     "\n",
+    "plt.setp(ax1, xticklabels=['Q1'])\n",
+    "plt.setp(ax2, xticklabels=['Q2'])\n",
+    "plt.setp(ax3, xticklabels=['Q3'])\n",
+    "plt.setp(ax4, xticklabels=['Q4'])\n",
+    "\n",
+    "\n",
     "ax1.boxplot(df_Q1['Tempo'])\n",
     "ax2.boxplot(df_Q2['Tempo'])\n",
     "ax3.boxplot(df_Q3['Tempo'])\n",
@@ -728,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +857,7 @@
        "Q4  205.272  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,16 +882,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Q1</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>51413.46</td>\n",
+       "      <td>36237.174960</td>\n",
+       "      <td>24631.0</td>\n",
+       "      <td>28621.25</td>\n",
+       "      <td>37850.5</td>\n",
+       "      <td>57722.25</td>\n",
+       "      <td>288698.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Q2</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>56983.13</td>\n",
+       "      <td>41817.623754</td>\n",
+       "      <td>27811.0</td>\n",
+       "      <td>33887.00</td>\n",
+       "      <td>42393.5</td>\n",
+       "      <td>60421.50</td>\n",
+       "      <td>330333.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Q3</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>54346.11</td>\n",
+       "      <td>30139.431338</td>\n",
+       "      <td>28612.0</td>\n",
+       "      <td>33653.75</td>\n",
+       "      <td>41594.0</td>\n",
+       "      <td>64280.75</td>\n",
+       "      <td>201548.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Q4</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>58987.33</td>\n",
+       "      <td>36003.740529</td>\n",
+       "      <td>31661.0</td>\n",
+       "      <td>36310.75</td>\n",
+       "      <td>45748.5</td>\n",
+       "      <td>66280.00</td>\n",
+       "      <td>268419.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "51413.46"
+       "    count      mean           std      min       25%      50%       75%  \\\n",
+       "Q1  200.0  51413.46  36237.174960  24631.0  28621.25  37850.5  57722.25   \n",
+       "Q2  200.0  56983.13  41817.623754  27811.0  33887.00  42393.5  60421.50   \n",
+       "Q3  200.0  54346.11  30139.431338  28612.0  33653.75  41594.0  64280.75   \n",
+       "Q4  200.0  58987.33  36003.740529  31661.0  36310.75  45748.5  66280.00   \n",
+       "\n",
+       "         max  \n",
+       "Q1  288698.0  \n",
+       "Q2  330333.0  \n",
+       "Q3  201548.0  \n",
+       "Q4  268419.0  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +991,7 @@
     "Q4_streams_summary=df_Q4['Streams'].describe()\n",
     "df_s=[Q1_streams_summary,Q2_streams_summary,Q3_streams_summary,Q4_streams_summary]\n",
     "Streams_summary_df=pd.DataFrame(df_s, index=([\"Q1\",\"Q2\",\"Q3\",\"Q4\"]))\n",
-    "Streams_summary_df[\"mean\"]\n",
+    "Streams_summary_df\n",
     "\n"
    ]
   },
@@ -1153,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1161,17 +1281,175 @@
      "output_type": "stream",
      "text": [
       "The correlation coefficient between Q1 Tempo and Popularity is -0.07\n",
-      "The correlation coefficient between Q1 Tempo and Popularity is -0.0\n",
-      "The correlation coefficient between Q1 Tempo and Popularity is -0.15\n",
-      "The correlation coefficient between Q1 Tempo and Popularity is -0.02\n"
+      "The correlation coefficient between Q2 Tempo and Popularity is -0.0\n",
+      "The correlation coefficient between Q3 Tempo and Popularity is -0.15\n",
+      "The correlation coefficient between Q4 Tempo and Popularity is -0.02\n"
      ]
     }
    ],
    "source": [
     "print(f\"The correlation coefficient between Q1 Tempo and Popularity is {round(pearsonr(df_Q1['Tempo'],df_Q1['Popularity'])[0],2)}\")\n",
-    "print(f\"The correlation coefficient between Q1 Tempo and Popularity is {round(pearsonr(df_Q2['Tempo'],df_Q2['Popularity'])[0],2)}\")\n",
-    "print(f\"The correlation coefficient between Q1 Tempo and Popularity is {round(pearsonr(df_Q3['Tempo'],df_Q3['Popularity'])[0],2)}\")\n",
-    "print(f\"The correlation coefficient between Q1 Tempo and Popularity is {round(pearsonr(df_Q4['Tempo'],df_Q4['Popularity'])[0],2)}\")"
+    "print(f\"The correlation coefficient between Q2 Tempo and Popularity is {round(pearsonr(df_Q2['Tempo'],df_Q2['Popularity'])[0],2)}\")\n",
+    "print(f\"The correlation coefficient between Q3 Tempo and Popularity is {round(pearsonr(df_Q3['Tempo'],df_Q3['Popularity'])[0],2)}\")\n",
+    "print(f\"The correlation coefficient between Q4 Tempo and Popularity is {round(pearsonr(df_Q4['Tempo'],df_Q4['Popularity'])[0],2)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The correlation coefficient between Q1 Tempo and Duration is 0.1\n",
+      "The correlation coefficient between Q2 Tempo and Duration is 0.0\n",
+      "The correlation coefficient between Q3 Tempo and Duration is -0.15\n",
+      "The correlation coefficient between Q4 Tempo and Duration is -0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The correlation coefficient between Q1 Tempo and Duration is {round(pearsonr(df_Q1['Tempo'],df_Q1['Duration'])[0],2)}\")\n",
+    "print(f\"The correlation coefficient between Q2 Tempo and Duration is {round(pearsonr(df_Q2['Tempo'],df_Q2['Duration'])[0],2)}\")\n",
+    "print(f\"The correlation coefficient between Q3 Tempo and Duration is {round(pearsonr(df_Q3['Tempo'],df_Q3['Duration'])[0],2)}\")\n",
+    "print(f\"The correlation coefficient between Q4 Tempo and Duration is {round(pearsonr(df_Q4['Tempo'],df_Q4['Duration'])[0],2)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "~top 50 vs bottom 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Pvalue for top50 vs bottom 50 in quarter 1 of 2019 is 0.9998'\n"
+     ]
+    }
+   ],
+   "source": [
+    "Q1_t50_df=df_Q1.head(50)\n",
+    "Q1_b50_df=df_Q1.tail(50)\n",
+    "pprint(f'Pvalue for top50 vs bottom 50 in quarter 1 of 2019 is {round(f_oneway(Q1_t50_df.Tempo,Q1_b50_df.Tempo)[1],4)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average tempo of bottom 50 songs vs top 50 songs in Q2 128.1745 vs 113.7046\n",
+      "The average tempo of bottom 50 songs vs top 50 songs in Q3 121.3086 vs 120.3106\n",
+      "The average tempo of bottom 50 songs vs top 50 songs in Q4 120.53556 vs 118.87192\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'The average tempo of bottom 50 songs vs top 50 songs in Q2 {round(Q2_b50_df.Tempo.mean(),4)} vs {round(Q2_t50_df.Tempo.mean(),4)}')\n",
+    "\n",
+    "print(f'The average tempo of bottom 50 songs vs top 50 songs in Q3 {round(Q3_b50_df.Tempo.mean(),4)} vs {round(Q3_t50_df.Tempo.mean(),4)}')\n",
+    "\n",
+    "print(f'The average tempo of bottom 50 songs vs top 50 songs in Q4 {Q4_b50_df.Tempo.mean()} vs {Q4_t50_df.Tempo.mean()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pvalue for top50 vs bottom 50 in quarter 2 of 2019 is 0.0105\n"
+     ]
+    }
+   ],
+   "source": [
+    "Q2_t50_df=df_Q2.head(50)\n",
+    "Q2_b50_df=df_Q2.tail(50)\n",
+    "print(f'Pvalue for top50 vs bottom 50 in quarter 2 of 2019 is {round(f_oneway(Q2_t50_df.Tempo,Q2_b50_df.Tempo)[1],4)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pvalue for top50 vs bottom 50 in quarter 3 of 2019 is 0.8686\n"
+     ]
+    }
+   ],
+   "source": [
+    "Q3_t50_df=df_Q3.head(50)\n",
+    "Q3_b50_df=df_Q3.tail(50)\n",
+    "print(f'Pvalue for top50 vs bottom 50 in quarter 3 of 2019 is {round(f_oneway(Q3_t50_df.Tempo,Q3_b50_df.Tempo)[1],4)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pvalue for top50 vs bottom 50 in quarter 1 of 2019 is 0.7594\n"
+     ]
+    }
+   ],
+   "source": [
+    "Q4_t50_df=df_Q4.head(50)\n",
+    "Q4_b50_df=df_Q4.tail(50)\n",
+    "print(f'Pvalue for top50 vs bottom 50 in quarter 1 of 2019 is {round(f_oneway(Q4_t50_df.Tempo,Q4_b50_df.Tempo)[1],4)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pvalue for overall tempo 2019 is 0.7357\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Pvalue for overall tempo 2019 is {round(f_oneway(df_Q1.Tempo,df_Q2.Tempo,df_Q3.Tempo,df_Q4.Tempo)[1],4)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####Results shows that there is no statistically significant difference between tempo amongst the 4 quarters"
    ]
   },
   {
