--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -873,7 +873,7 @@
     }
    ],
    "source": [
-    "#Finding any possible correlation between dancibility and steams\n",
+    "#Finding any possible correlation between dancibility and streams\n",
     "\n",
     "fig2, axs = plt.subplots(1,4,sharex='col', sharey='row',\n",
     "                        gridspec_kw={'hspace': 0, 'wspace': 0},figsize=(20,10))\n",
