update semi combined code

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -213,9 +213,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "retrying ...5secs\n",
+      "retrying ...1secs\n",
+      "retrying ...2secs\n",
+      "retrying ...4secs\n",
+      "retrying ...4secs\n",
+      "retrying ...4secs\n",
+      "retrying ...4secs\n",
+      "retrying ...4secs\n",
+      "retrying ...4secs\n"
+     ]
+    }
+   ],
    "source": [
     "#create a list of the csv file data frames\n",
     "df_list = [top_songs_CA_Q1 ,top_songs_CA_Q2 ,top_songs_CA_Q3 ,top_songs_CA_Q4 ]\n",
@@ -251,7 +267,9 @@
     "        dictionary['Danceability'].append(audio_features[0]['danceability'])\n",
     "    \n",
     "    #append quarter dictionary to master dictionary\n",
-    "    master_dictionary[index] = dictionary"
+    "    master_dictionary[index] = dictionary\n",
+    "    \n",
+    "    master_dictionary"
    ]
   },
   {
@@ -2029,6 +2047,13 @@
     "\n",
     "f_oneway(Valence_dance_Q1,Valence_dance_Q2,Valence_dance_Q3,Valence_dance_Q4)\n",
     "####Results shows that there is no statistically significant difference between Dacnceability amongst the 4 quarters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tempo Analysis"
    ]
   },
   {
